[package]
name = "fab"
version = "0.1.0"
authors = ["Tony Lau <ual_ynot@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures   = "0.3"
tokio     = { version = "0.3", features = ["full"] }
crossbeam = "0.8"
rand      = "0.7"
