[package]
name = "fab"
version = "0.1.0"
authors = ["Tony Lau <ual_ynot@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand         = "0.7"
futures      = "0.3"
futures-util = { version = "0.3", features = ["channel"] }
tokio        = { version = "0.3", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
bincode      = "1.3"
indexmap     = "1.6"
